--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,12 +2,19 @@
     box-sizing: border-box;
     margin: 0;
 }
+body{
+    background-image: url(../Images/dark-room-with-light-background.jpg);
+    background-size: contain ;
+    width: 100%;
+    height: 100vh;
+}
 
 h1{
     font-weight: 900;
     font-size: 60px;
     text-align: center;
     margin-top: 50px;
+    color: white;
 }
 
 h3{
@@ -15,6 +22,7 @@ h3{
     text-align: center;
     margin-top: 40px;
     font-weight: 100;
+    color: white;
 }
 
 button{
@@ -37,4 +45,5 @@ p{
     font-size: 40px;
     text-align: center;
     font-weight: 100;
+    color: white;
 }
